tests/tooling/fixtures/native/recovery/negative/negative_switch_nonempty_case_fallthrough_return_conservative_reject.objc3
// Negative fixture: non-empty case-body break/control-flow paths remain conservative in switch return-path analysis.
// Expected diagnostic code(s): O3S205.
module NegativeSwitchNonemptyCaseFallthroughReturnConservativeReject;

fn main() -> i32 {
  let value = 1;
  switch (value) {
    case 1:
      let marker = 0;
      marker = marker + 1;
      break;
    case 2:
      return 42;
    default:
      return 7;
  }
}
